corpus/enums.txt
=======================================
global enum with one option
=======================================

enum A { One }

---

(compilation_unit
  (enum_declaration
    (identifier_name)
    (enum_member_declaration_list
      (enum_member_declaration (identifier_name)))))

=======================================
enum with integer values
=======================================

enum B { Ten = 10, Twenty = 20 }

---

(compilation_unit
  (enum_declaration
    (identifier_name)
    (enum_member_declaration_list
      (enum_member_declaration (identifier_name) (integer_literal))
      (enum_member_declaration (identifier_name) (integer_literal)))))

=======================================
enum with byte base
=======================================

namespace A {
  enum B : byte { Five = 0x05, Fifteen = 0x0F }
}

---

(compilation_unit
  (namespace_declaration
    (identifier_name)
    (declaration_list
      (enum_declaration
        (identifier_name)
        (base_list (predefined_type))
        (enum_member_declaration_list
          (enum_member_declaration (identifier_name) (integer_literal))
          (enum_member_declaration (identifier_name) (integer_literal)))))))
